<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".tabs.tab_complex">

    <ImageView
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/list_screen"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
    </ImageView>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_v_20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.4">
    </androidx.constraintlayout.widget.Guideline>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_v_80"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9">
    </androidx.constraintlayout.widget.Guideline>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_v_10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1">
    </androidx.constraintlayout.widget.Guideline>


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_50"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5">
    </androidx.constraintlayout.widget.Guideline>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_60"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.6">
    </androidx.constraintlayout.widget.Guideline>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_40"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.4">
    </androidx.constraintlayout.widget.Guideline>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_30"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3">
    </androidx.constraintlayout.widget.Guideline>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2">
    </androidx.constraintlayout.widget.Guideline>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_70"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.7">
    </androidx.constraintlayout.widget.Guideline>

    <TextView
        android:id="@+id/Editorial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Editorial"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@id/guideline_30"
        app:layout_constraintTop_toBottomOf="@id/guideline_20"
        app:layout_constraintEnd_toStartOf="@id/guideline_v_80"
        app:layout_constraintStart_toEndOf="@id/guideline_v_20">
    </TextView>

    <TextView
        android:id="@+id/Year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Año"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@id/guideline_40"
        app:layout_constraintTop_toBottomOf="@id/guideline_30"
        app:layout_constraintEnd_toStartOf="@id/guideline_v_80"
        app:layout_constraintStart_toEndOf="@id/guideline_v_20">
    </TextView>

    <TextView
        android:id="@+id/Pages"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Páginas"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@id/guideline_50"
        app:layout_constraintTop_toBottomOf="@id/guideline_40"
        app:layout_constraintEnd_toStartOf="@id/guideline_v_80"
        app:layout_constraintStart_toEndOf="@id/guideline_v_20">
    </TextView>

    <TextView
        android:id="@+id/theme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Tema"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@id/guideline_60"
        app:layout_constraintTop_toBottomOf="@id/guideline_50"
        app:layout_constraintEnd_toStartOf="@id/guideline_v_80"
        app:layout_constraintStart_toEndOf="@id/guideline_v_20">
    </TextView>

    <TextView
        android:id="@+id/ISBN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="ISBN"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@id/guideline_70"
        app:layout_constraintTop_toBottomOf="@id/guideline_60"
        app:layout_constraintEnd_toStartOf="@id/guideline_v_80"
        app:layout_constraintStart_toEndOf="@id/guideline_v_20">
    </TextView>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/editorial_es"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@id/guideline_30"
        app:layout_constraintTop_toBottomOf="@id/guideline_20"
        app:layout_constraintEnd_toStartOf="@id/guideline_v_20"
        app:layout_constraintStart_toEndOf="@id/guideline_v_10">
    </TextView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/year_es"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@id/guideline_40"
        app:layout_constraintTop_toBottomOf="@id/guideline_30"
        app:layout_constraintEnd_toStartOf="@id/guideline_v_20"
        app:layout_constraintStart_toEndOf="@id/guideline_v_10">
    </TextView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pages_es"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@id/guideline_50"
        app:layout_constraintTop_toBottomOf="@id/guideline_40"
        app:layout_constraintEnd_toStartOf="@id/guideline_v_20"
        app:layout_constraintStart_toEndOf="@id/guideline_v_10">
    </TextView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/topic_es"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@id/guideline_60"
        app:layout_constraintTop_toBottomOf="@id/guideline_50"
        app:layout_constraintEnd_toStartOf="@id/guideline_v_20"
        app:layout_constraintStart_toEndOf="@id/guideline_v_10">
    </TextView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ISBN_es"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@id/guideline_70"
        app:layout_constraintTop_toBottomOf="@id/guideline_60"
        app:layout_constraintEnd_toStartOf="@id/guideline_v_20"
        app:layout_constraintStart_toEndOf="@id/guideline_v_10">
    </TextView>
</androidx.constraintlayout.widget.ConstraintLayout>